--- a/index.html
+++ b/index.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
 <head>
   <title>Sending...</title>
-  <link rel="stylesheet" type="text/css" href="/style.css"
+  <link rel="stylesheet" type="text/css" href="/win-8-upgrade-saga/style.css"
   <meta http-equiv="refresh" content="0; url=https://7zeb.github.io/win-8-upgrade-saga/home.html">
 </head>
 <body>
-  <p>If you are not redirected, <a href="/home.html">Click Here</a></p>
+  <p>If you are not redirected, <a href="/win-8-upgrade-saga/home.html">Click Here</a></p>
 </body>
-<script src="/required.js"></script>
+<script src="/win-8-upgrade-saga/required.js"></script>
 </html>
