--- a/index.html
+++ b/index.html
@@ -5,6 +5,9 @@
   <meta http-equiv="refresh" content="0; url=https://7zeb.github.io/win-8-upgrade-saga/home.html">
 </head>
 <body>
+  <script>
+    window.location.replace("http://7zeb.github.io/win-8-upgrade-saga/home.html");
+  </script>
   <p>If you are not redirected, <a href="/win-8-upgrade-saga/home.html">Click Here</a></p>
 </body>
 <script src="/win-8-upgrade-saga/required.js"></script>
