make the better homepage

--- a/home.html
+++ b/home.html
@@ -1,1 +1,71 @@
-e
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Windows 8 Upgrade Saga - Home</title>
+    <link rel="icon" type="image/x-icon" href="/win-8-upgrade-saga/assets/favicon.ico">
+    <link rel="stylesheet" href="/win-8-upgrade-saga/style.css">
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600&display=swap" rel="stylesheet">
+</head>
+<body>
+    <!-- Navigation Bar -->
+    <nav class="navbar glass">
+        <div class="nav-logo" style="font-size:1.5em;font-weight:bold;letter-spacing:0.05em;">NewUI - Home</div>
+        <div class="nav-links">
+            <a href="/win-8-upgrade-saga/index.html" class="active">Home</a>
+            <a href="/win-8-upgrade-saga/roadmap.html">Roadmap</a>
+            <a href="/win-8-upgrade-saga/progress.html">Progress</a>
+            <a href="/win-8-upgrade-saga/updates.html">Updates</a>
+            <a href="https://BetaCity.github.io">BetaCity</a>
+            <button class="mode-toggle" aria-label="Toggle dark mode">🌙</button>
+        </div>
+    </nav>
+
+    <!-- Main Content with Infobox -->
+    <main>
+        <div class="main-flex">
+            <!-- Main Sections -->
+            <div style="flex:2 1 0; min-width:0;">
+                <section class="glass" id="home">
+                    <h1>Windows 8 Upgrade Saga</h1>
+                    <p>Information about 7Zeb's Windows 8 Upgrade Saga Project</p>
+                </section>
+
+
+                <section class="glass" id="roadmap">
+                    <h2>See the roadmap</h2>
+                    <p>See the roadmap for the project <a href="/win-8-upgrade-saga/roadmap.html">Here</a></p>
+                </section>    
+
+                <section class="glass" id="current-build">
+                    <h2>Current Build</h2>
+                    <p>This is the current build in the saga</p>
+                    <br>
+                   <h3>Windows 8 Build 7800</h3>
+                </section>
+
+              
+            </div>
+            <!-- Infobox -->
+            <aside class="infobox glass">
+                <h3>Progress</h3>
+                <p style="margin-left:0.5em;">This is the progress of the upgrade saga.</p>
+                <ul style="margin-left:1em;">
+                    <li>Current Build: 7800</li>
+                    <li>Everything Going Wrong right now</li>
+                    <li>Installed on: September 20, 2025</li>
+                </ul>
+            </aside>
+        </div>
+    </main>
+
+    <!-- Footer -->
+    <footer class="footer glass">
+        <p>© 2025 Rutwik Stuff Branding Umbrella | This website is <a href="https://www.github.io/7zeb/newui">open-source*</a></p>
+        <br>
+        <p>Last modified on: September 29, 2025</p>
+    </footer>
+    <script src="/win-8-upgrade-saga/required.js"></script>
+</body>
+</html>
