--- a/home.html
+++ b/home.html
@@ -11,7 +11,7 @@
 <body>
     <!-- Navigation Bar -->
     <nav class="navbar glass">
-        <div class="nav-logo" style="font-size:1.5em;font-weight:bold;letter-spacing:0.05em;">NewUI - Home</div>
+        <div class="nav-logo" style="font-size:1.5em;font-weight:bold;letter-spacing:0.05em;">Windows 8 Upgrade Saga - Home</div>
         <div class="nav-links">
             <a href="/win-8-upgrade-saga/index.html" class="active">Home</a>
             <a href="/win-8-upgrade-saga/roadmap.html">Roadmap</a>
